Fixed contact alignment

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body {
     width: 100%;
     margin-top: 50px;
     float: left;
-    margin-left: 10%;
+    margin-left: 5%;
 }
 
 .contactMethod {
